# synthorbis-uni

./: .gitignore  .gitmodules  LICENSE  PHASE1_KICKOFF.md  README.md  docker-compose.yml
.gitee/workflows/: ci.yml
.github/workflows/: ci.yml  linux.yml  macos.yml  release.yml  synthorbis-ai-windows.yml  windows.yml  xinxin.yml
docker/linux-arm64/: Dockerfile
docker/linux-loongarch/: Dockerfile
docker/linux-x64/: Dockerfile
docker/onnx-tool/: Dockerfile
docker/windows/: Dockerfile
docs/: AI空间输入法技术开发文档.docx  BUILD-LINUX-WSL.md  CI-CD-SETUP.md  TECH_DECISIONS.md  技术实施蓝图.docx
engine/synthorbis-ai/: CMakeLists.txt  synthorbis-ai-config.cmake.in
engine/synthorbis-ai/include/synthorbis/ai/: asr_engine.h  asr_types.h  cloud_asr_engine.h  ctc_decoder.h  fbank.h  onnx_engine.h
engine/synthorbis-ai/src/asr/: asr_engine.cc  cloud_asr_engine.cc  ctc_decoder.cc  fbank.cc  onnx_engine.cc
engine/synthorbis-ai/test/: CMakeLists.txt  test_asr.cc  test_asr_e2e.cc  test_cloud_asr.cc  test_ctc_decoder.cc  test_fbank.cc
engine/synthorbis-engine/: CMakeLists.txt  SynthOrbisEngineConfig.cmake.in
engine/synthorbis-engine/include/: synthorbis.h
engine/synthorbis-engine/include/synthorbis/: candidates.h  common.h  engine.h  input_adapter.h  session.h
engine/synthorbis-engine/src/: candidates.cc  engine.cc  input_adapter.cc  session.cc
engine/synthorbis-engine/src/linux/: engine_platform.cc
engine/synthorbis-engine/src/macos/: engine_platform.cc
engine/synthorbis-engine/src/vehicle/: engine_platform.cc
engine/synthorbis-engine/src/windows/: engine_platform.cc
engine/synthorbis-engine/test/: test_engine.cc
engine/synthorbis-ui/: CMakeLists.txt
engine/synthorbis-ui/include/synthorbis/: ui.h
engine/synthorbis-ui/include/synthorbis/ui/: candidate_window.h  config_dialog.h  tray_icon.h
engine/synthorbis-ui/src/: candidate_window.cc  config_dialog.cc  tray_icon.cc
engine/synthorbis-ui/test/: test_ui.cc
platform/: CMakeLists.txt
platform/include/: platform.h
platform/include/platform/: audio.h  compiler.h  config.h  context.h  macros.h  panic.h  thread.h  types.h
platform/src/linux/: audio_alsa.cc  config_xdg.cc  platform_linux.cc
platform/src/macos/: audio_coreaudio.cc  config_userdefaults.cc  platform_apple.cc
platform/src/vehicle/: audio_ohos.cc  config_preferences.cc  platform_ohos.cc
platform/src/windows/: audio_wasapi.cc  config_registry.cc  platform_win.cc
platform/tests/: test_platform.cc  test_types.cc
scripts/: build-ai-wsl.sh  build-local.ps1  check-packages.ps1  check-static.ps1  debug_asr_pipeline.py  e2e_asr_test.py  push-all.sh  quantize_onnx.py  scan-vs-cache.ps1  scan-vs2022.ps1  test_quantized_model.py  verify_aliyun_asr.py
scripts/ci/: build.sh
